add links to the different views

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,15 +1,15 @@
 html
   head
     title Forum
-    link(rel="stylesheet", href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css")
+    link(rel='stylesheet', href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css")
   body
     .navbar.navbar-inverse.navbar-static-top
       .container-fluid
         .navbar-header
-          a.navbar-brand(href="/") Forum
+          a.navbar-brand(href='/') Forum
         ul.nav.navbar-nav.navbar-right
           li.dropdown
-            a.dropdown-toggle(href="#", data-toggle="dropdown") username
+            a.dropdown-toggle(href='#', data-toggle='dropdown') username
               span.caret
             ul.dropdown-menu
               li
@@ -17,5 +17,5 @@ html
                 a Log out
     .container-fluid
       block content
-    script(src="https://code.jquery.com/jquery-3.2.1.min.js")
-    script(src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js")
+    script(src='https://code.jquery.com/jquery-3.2.1.min.js')
+    script(src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js')
