--- a/views/post.pug
+++ b/views/post.pug
@@ -4,7 +4,7 @@ block content
   
   ol.breadcrumb
     li
-      a(href="/") Home
+      a(href='/') Home
     li
-      a(href="/topic/#{topic.id}") #{topic.name}
+      a(href='/topic/' + topic.id) #{topic.name}
     li.active #{post.name}
