--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,6 +1,6 @@
 html
   head
-    title Forum
+    title Awesome Forum
     link(rel='stylesheet', href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css")
   body
     .navbar.navbar-inverse.navbar-static-top
