--- a/views/layout.pug
+++ b/views/layout.pug
@@ -6,7 +6,7 @@ html
     .navbar.navbar-inverse.navbar-static-top
       .container-fluid
         .navbar-header
-          a.navbar-brand(href='/') Forum
+          a.navbar-brand(href='/') Awesome Forum
         ul.nav.navbar-nav.navbar-right
           li.dropdown
             a.dropdown-toggle(href='#', data-toggle='dropdown') username
