add responsive viewport

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,6 +1,7 @@
 html
   head
     title Awesome Forum
+    meta(name='viewport', content='width=device-width,initial-scale=1,user-scalable=0')
     link(rel='stylesheet', href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css")
   body
     .navbar.navbar-inverse.navbar-static-top
