--- a/views/topic.pug
+++ b/views/topic.pug
@@ -5,7 +5,7 @@ block content
   ol.breadcrumb
     li
       a(href='/') Home
-    li.active #{topic.name}
+    li.active #{topic.topic_name}
     
   .panel.panel-success
     .panel-heading Stickied Posts
@@ -24,10 +24,10 @@ block content
           p.list-group-item-text Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
   
   .list-group
-    each val in [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
-      a.list-group-item(href='/topic/'+topic.id+'/post/1')
-        h4.list-group-item-heading Post title goes here
-        p.list-group-item-text Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+    each post in posts
+      a.list-group-item(href='/topic/'+post.topic_id+'/post/'+post.post_id)
+        h4.list-group-item-heading #{post.post_title}
+        p.list-group-item-text #{post.post_text.substring(0, 100)}...
           
 
       
