--- a/views/topic.pug
+++ b/views/topic.pug
@@ -13,16 +13,8 @@ block content
       each val in [1, 2]
         a.list-group-item(href='/topic/'+topic.id+'/post/1')
           h4.list-group-item-heading Post title goes here
-          p.list-group-item-text Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-            
-  .panel.panel-info
-    .panel-heading Active Posts
-    .list-group
-      each val in [1, 2, 3]
-        a.list-group-item(href='/topic/'+topic.id+'/post/1')
-          h4.list-group-item-heading Post title goes here
-          p.list-group-item-text Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-  
+          p.list-group-item-text Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore...
+
   .list-group
     each post in posts
       a.list-group-item(href='/topic/'+post.topic_id+'/post/'+post.post_id)
