--- a/views/profile.pug
+++ b/views/profile.pug
@@ -24,15 +24,12 @@ block content
       .panel-heading Topics Created
       .list-group
         each val in [1, 2, 3]
-          a.list-group-item(href='/topic/1')
-            h4.list-group-item-heading Topic name goes here
-            p.list-group-item-text Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore...
-
+          .list-group-item
+            a.list-group-item-heading(href='/topic/1') 
+              strong Topic
 
     .panel.panel-default
       .panel-heading Recent Posts
       .list-group
         each val in [1, 2, 3, 4, 5]
-          a.list-group-item(href='/topic/1/post/1')
-            h4.list-group-item-heading Post title goes here
-            p.list-group-item-text Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore...
+          +post({post_id: 1, topic_id: 1, post_title: 'fsdf'})
