--- a/views/post.pug
+++ b/views/post.pug
@@ -2,28 +2,30 @@ extends layout.pug
 
 block content
   
-  ol.breadcrumb
-    li
-      a(href='/') Home
-    li
-      a(href='/topic/' + topic.topic_id) #{topic.topic_name}
-    li.active #{post.post_title}
-    
   .container
+  
+    ol.breadcrumb
+      li
+        a(href='/') Home
+      li(style='padding-left: 5px')
+        a(href='/topic/' + topic.topic_id) #{topic.topic_name}
+      li(style='padding-left: 5px').active #{post.post_title}
+      
+    h3 #{post.post_title}        
+    p #{post.post_text}
     
-    .panel.panel-default
-      .panel-body
-        h1 #{post.post_title}        
-        p #{post.post_text}
+    hr
         
-    h3 Reply
     form
       .form-group
-        textarea.form-control(rows=10)
+        textarea.form-control(rows=5, placeholder='Send a reply...')
       button.btn.btn-primary Submit Reply
-          
-    .list-group
-      each reply in [1,2,3,4,5,6,7,8,9,10]
-        .list-group-item
-          p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-          small someone else on April 24, 2017
+      span.pull-right 23 / 1000 
+      
+    .panel.panel-default
+      .panel-heading Replies    
+      .list-group
+        each reply in [1,2,3,4,5,6,7,8,9,10]
+          .list-group-item
+            p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            small someone else on April 24, 2017
