--- a/views/post.pug
+++ b/views/post.pug
@@ -8,11 +8,11 @@ block content
       li
         a(href='/') Home
       li(style='padding-left: 5px')
-        a(href='/topic/' + topic.topic_id) #{topic.topic_name}
-      li(style='padding-left: 5px').active #{post.post_title}
+        a(href='/topic/' + post.topic_id) #{post.topic.name}
+      li(style='padding-left: 5px').active #{post.title}
       
-    h3 #{post.post_title}        
-    p #{post.post_text}
+    h3 #{post.title}        
+    p #{post.text}
     
     hr
         
@@ -25,7 +25,9 @@ block content
     .panel.panel-default
       .panel-heading Replies    
       .list-group
-        each reply in [1,2,3,4,5,6,7,8,9,10]
+        each reply in post.replies
           .list-group-item
-            p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-            small someone else on April 24, 2017
+            p #{reply.text}
+            span 
+              a(href='/users/'+reply.user_id) #{reply.user.username} 
+              span  &middot; #{reply.date.fromNow()}
