--- a/views/topic.pug
+++ b/views/topic.pug
@@ -7,26 +7,27 @@ block content
     ol.breadcrumb
       li
         a(href='/') Home
-      li.active(style='padding-left: 5px') #{topic.topic_name}
+      li.active(style='padding-left: 5px') #{topic.name}
       
     .row
       .col-md-8
         .panel.panel-success
           .panel-heading Stickied Posts
           .list-group
-            each post in posts.slice(0, 2)
+            each post in topic.posts.slice(0, 2)
               +post(post)
         .list-group
-          each post in posts
+          each post in topic.posts
             +post(post)
       
       .col-md-4
-        a.btn.btn-primary.btn-block(role='button', href='/create?type=post&topic='+topic.topic_name) Create a post in #{topic.topic_name}
+        a.btn.btn-primary.btn-block(role='button', href='/create?type=post&topic='+topic.name) Create a post in #{topic.name}
         br
         .panel.panel-default
           .panel-heading Topic Information
           .panel-body
-            h3(style='margin-top: 0') #{topic.topic_name}
-            p Created on #{topic.date_created.format('MMMM d, Y')} by #{topic.topic_creator}
-            p #{topic.topic_description}
+            h3(style='margin-top: 0') #{topic.name}
+            p #{topic.description}
+            p Created on #{topic.date.format('MMMM d, Y')} by 
+              a(href='/user/'+topic.user_id) #{topic.user.username}
         a.btn.btn-default.btn-block(role='button', href='/create?type=topic') Create your own topic
