improve profile and user page

--- a/views/create.pug
+++ b/views/create.pug
@@ -19,7 +19,7 @@ block content
           label Topic
           input.form-control(value=(query.topic || ''))
         .form-group
-          label Subject
+          label Title
           input.form-control
         .form-group
           label Text
