--- a/views/post.pug
+++ b/views/post.pug
@@ -20,14 +20,15 @@ block content
       .form-group
         textarea.form-control(rows=5, placeholder='Send a reply...')
       button.btn.btn-primary Submit Reply
-      span.pull-right 23 / 1000 
+      span.pull-right 0 / 1000 
       
     .panel.panel-default
       .panel-heading Replies    
       .list-group
         each reply in post.replies
           .list-group-item
-            p #{reply.text}
+            span #{reply.text}
+            br
             span 
               a(href='/users/'+reply.user_id) #{reply.user.username} 
               span  &middot; #{reply.date.fromNow()}
