minor styling fixes

--- a/views/user.pug
+++ b/views/user.pug
@@ -19,7 +19,7 @@ block content
                   p #{user.email_address}
                 .form-group
                   label Joined
-                  p #{user.date.format('MMMM d, YYYY')}
+                  p #{user.date.format('MMMM D, YYYY')}
                 .form-group
                   label Biography
                   p #{user.biography}
@@ -31,10 +31,10 @@ block content
                   p #{user.username}
                 .form-group
                   label Joined
-                  p #{user.date.format('MMMM d, YYYY')}
+                  p #{user.date.format('MMMM D, YYYY')}
                 .form-group
                   label Last seen 
-                  p #{user.login.format('MMMM d, YYYY')}
+                  p #{user.login.format('MMMM D, YYYY')}
                 .form-group
                   label Biography
                   p #{user.biography}
