--- a/views/post.pug
+++ b/views/post.pug
@@ -11,7 +11,10 @@ block content
         a(href='/topic/' + post.topic_id) #{post.topic.name}
       li(style='padding-left: 5px').active #{post.title}
       
-    h3 #{post.title}        
+    h3 #{post.title}
+    h5 By 
+      a(href='/user/'+post.user_id) #{post.user.username} 
+      | on #{post.date.format('MMMM D, YYYY')} at #{post.date.format('hh:mm A')}    
     p #{post.text}
     
     hr
