--- a/views/topic.pug
+++ b/views/topic.pug
@@ -28,6 +28,6 @@ block content
           .panel-body
             h3(style='margin-top: 0') #{topic.name}
             p #{topic.description}
-            p Created on #{topic.date.format('MMMM d, Y')} by 
+            p Created on #{topic.date.format('MMMM D, YYYY')} by 
               a(href='/user/'+topic.user_id) #{topic.user.username}
         a.btn.btn-default.btn-block(role='button', href='/create?type=topic') Create your own topic
