--- a/views/home.pug
+++ b/views/home.pug
@@ -1,34 +1,35 @@
 extends layout.pug
 
 block content
-  .container
-    .row
-      .col-md-8
-        .panel.panel-default
-          .panel-heading Recently Replied
-          .list-group
-            each post in posts
-              +post(post)
-              
-      .col-md-4
+  .row
+    
+    .col-md-8
+      
+      .panel.panel-default
+        .panel-heading Recently Replied
+        .list-group
+          each post in posts
+            +post(post)
+            
+    .col-md-4
 
-        .panel.panel-default
-          .panel-heading New Posts
-          .list-group
-            each post in newPosts
-              .list-group-item
-                a.list-group-item-heading(href='/topic/'+post.topic_id+'/post/'+post.post_id) #{post.title.substring(0, 40)}...
-                  
-        .panel.panel-default
-          .panel-heading New Topics
-          .list-group
-            each topic in newTopics
-              .list-group-item
-                a.list-group-item-heading(href='/topic/'+topic.topic_id) #{topic.name}
-                  
-        .panel.panel-default
-          .panel-heading New Users
-          .list-group
-            each user in newUsers
-              .list-group-item
-                a.list-group-item-heading(href='/user/'+user.user_id) #{user.username}
+      .panel.panel-default
+        .panel-heading Newest Posts
+        .list-group
+          each post in newPosts
+            .list-group-item
+              a.list-group-item-heading(href='/topic/'+post.topic_id+'/post/'+post.post_id) #{post.title.substring(0, 40)}...
+                
+      .panel.panel-default
+        .panel-heading Newest Topics
+        .list-group
+          each topic in newTopics
+            .list-group-item
+              a.list-group-item-heading(href='/topic/'+topic.topic_id) #{topic.name}
+                
+      .panel.panel-default
+        .panel-heading Newest Users
+        .list-group
+          each user in newUsers
+            .list-group-item
+              a.list-group-item-heading(href='/user/'+user.user_id) #{user.username}
