--- a/views/layout.pug
+++ b/views/layout.pug
@@ -30,7 +30,7 @@ html
             li
               a(href='/login') Log in
               
-    .container-fluid
+    .container
       block content
     script(src='https://code.jquery.com/jquery-3.2.1.min.js')
     script(src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js')
